# iso

./: .gitignore  HANDOVER.md  README.md  license.txt  push_to_github.sh  pyproject.toml
giaodien/: preview_new_ui.html
giaodien/attp_hoang_giang_design_system/: DESIGN.md
giaodien/b_ng_i_u_khi_n/: code.html
giaodien/b_ng_i_u_khi_n_desktop/: code.html
giaodien/gi_m_s_t_oprp/: code.html
giaodien/gi_m_s_t_oprp_desktop/: code.html
giaodien/h_m_nay/: code.html
giaodien/h_m_nay_desktop/: code.html
giaodien/truy_xu_t_l/: code.html
giaodien/truy_xu_t_l_desktop/: code.html
hg_food_safety/: hooks.py  modules.txt  patches.txt  schedule.py  tasks.py  utils.py
hg_food_safety/api/: _guards.py  analytics.py  batch.py  docs.py  fbc.py  oprp.py  portal.py  qc.py  recall.py  trace.py
hg_food_safety/setup/: catalog.py  install.py
hg_food_safety/translations/: vi.csv
hg_food_safety/www/: atp.html  atp.py
tai_lieu_iso/: Ban mo ta thiet ke - He thong ATTP so hoa tren ERPNext v16.md  Bang_tong_hop_thay_doi_tai_lieu.xlsx  Bo bieu mau chuan hoa ATTP (san sang so hoa).xlsx  Cap nhat phap luat ATTP 2026 - Danh muc tai lieu ben ngoai.html  Danh gia app iso22000_fsms - do phu ISO 22000.html  Huong dan su dung bieu mau (cho nguoi moi).docx  Lich cong viec & Danh muc bieu mau ATTP (cap nhat).xlsx  Lich cong viec ATTP Hoang Giang.xlsx  Noi quy an toan ve sinh thuc pham.docx  Prompt thiet ke giao dien (Google Stitch).md  README.md  Ra soat bieu mau - quy trinh (danh gia & cai tien).xlsx  X-ray code app iso22000_fsms - Bao cao handover.html
(+203 files in other folders)
